--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,5 +2,8 @@ pandoc: 2.11.4
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles: {}
-last_built: 2021-04-14T19:14Z
+last_built: 2021-04-14T20:40Z
+urls:
+  reference: https://purrr.tidyverse.org/reference
+  article: https://purrr.tidyverse.org/articles
 
