--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,7 @@ Authors@R:
            email = "pedro.rafael.marinho@gmail.com",
            comment = c(ORCID = "0000-0003-1591-8300"))
 Description: Numerical evaluation of some expressions in the paper.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
