--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,8 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports: 
-    magrittr
+    actuar,
+    magrittr,
+    numDeriv
 URL: https://github.com/prdm0/MarshallOlkinPSG
 BugReports: https://github.com/prdm0/MarshallOlkinPSG/issues
