Update NAMESPACE, Examples and site.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,16 @@ export("%>%")
 export(eq_19)
 export(eval_plot_moptw)
 export(exp_G)
+export(pdf_theorical)
 export(pf_geometric)
 export(pf_logarithmic)
 export(pf_ztp)
 export(upsilon)
+importFrom(actuar,dlogarithmic)
+importFrom(furrr,future_map_dbl)
+importFrom(future,plan)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,ggplot)
 importFrom(magrittr,"%>%")
+importFrom(stats,dgeom)
+importFrom(stats,pweibull)
