Correcting the parameterization of the Weibull distribution. Using the same one used in the paper.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(upsilon)
 importFrom(actuar,dlogarithmic)
 importFrom(furrr,future_map_dbl)
 importFrom(future,plan)
+importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,ggplot)
 importFrom(magrittr,"%>%")
