--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,14 @@ importFrom(actuar,dlogarithmic)
 importFrom(furrr,future_map_dbl)
 importFrom(future,plan)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,ylab)
+importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(stats,dgeom)
 importFrom(stats,pweibull)
