Updating the truncated logarithmic probability function at zero.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(pf_logarithmic)
 export(pf_ztp)
 export(upsilon)
 importFrom(actuar,dlogarithmic)
+importFrom(actuar,dztgeom)
 importFrom(furrr,future_map_dbl)
 importFrom(future,plan)
 importFrom(ggplot2,aes)
@@ -22,5 +23,4 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,ylab)
 importFrom(glue,glue)
 importFrom(magrittr,"%>%")
-importFrom(stats,dgeom)
 importFrom(stats,pweibull)
